examples/test/testpolicy4956.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4956
  namespace: namespace485
spec:
  podSelector:
    matchLabels:
      key45: value41
      key16: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value29
          key45: value41
          key44: value20
      podSelector:
        matchLabels:
          key19: value15
          key35: value36
